# business-spec-kit

./: .gitignore  LICENSE  README.md  TESTS.md  pyproject.toml
bk/: __init__.py  cli.py
bk/templates/: config.md  constitution.md  glossary.md  plan.template.md  strategy.template.md
bk/templates/brief/: brief.general.md  brief.gtm.md  brief.partnership.md  brief.pitch.md  brief.strategy.md
bk/templates/commands/: bk.brief.md  bk.clarify.md  bk.execute.md  bk.plan.md  bk.review.md  bk.status.md  bk.strategy.md
bk/templates/execute/: deck-outline.md  email.md  gtm.md  objections.md  partner-brief.md  pitch.md  proposal.md
bk/templates/modules-available/business-case/: MODULE.md  business-case.template.md  financial-model.template.md  stakeholder-map.template.md
bk/templates/modules-available/governance/: MODULE.md  compliance-checklist.template.md  decision-log.template.md
bk/templates/modules-available/itil/: MODULE.md  sla.template.md
bk/templates/modules-available/okr/: MODULE.md  okr.template.md
bk/templates/modules-available/retrospective/: MODULE.md  retro.template.md
bk/templates/modules-available/rfp-issue/: MODULE.md  rfp.template.md  scorecard.template.md
bk/templates/modules-available/rfp-respond/: MODULE.md  rfp-response.template.md
bk/templates/modules-available/safe/: MODULE.md  pi-plan.template.md
bk/templates/modules-available/scrum/: MODULE.md  sprint-plan.template.md
docs/: README.md  how-it-works.md  modules.md  use-cases.md
